# viewer_mosaic

./: 2_designing_our_app.py  3_gridlayout.py  ARCHITECTURE.md  DroppablePlotWidget.py  PlotNavigator.py  Plot_manager.py  Plot_managerv2.py  Plot_object_command_line.py  README.md  calculator.py  data_manager.py  first_application.py  main.py  matplotlib_logic.py  miniWidget.py  pyproject.toml  pyqt_plot.py  pyqt_plot_2.py  pyqt_test.py  viever_command_line.py  viewer_class.py
learning/: DRAG_AND_DROP.md  KEY_LEARNINGS.md  RELOADING_WORKFLOW.md  SLICE_RENDERING.md
