[project]
name = "matplotlib-viwer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pynrrd>=1.1.3",
    "pyqt5>=5.15.11",
    "rich>=14.1.0",
    "scikit-image>=0.25.2",
]
